--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -104,6 +104,7 @@
 			img {
 				margin: 0 10px 0 0;
 				width: auto;
+				flex-shrink: 0;
 			}
 
 			img {
@@ -278,7 +279,7 @@
 			.FlySelect {
 				width: 100%;
 				height: 57px;
-				padding: 0 20px;
+				padding: 0 50px 0 20px;
 				font-weight: 500;
 				background-position: right 20px top 50%;
 
